--- a/methanextrade.com/dashboard/autocopyhistory.html
+++ b/methanextrade.com/dashboard/autocopyhistory.html
@@ -3473,7 +3473,7 @@ let totalCopytrade=0;
 
 var tbl = $('.table-body');
 var td=$('<td>');
-     userInfo.history.forEach(function (user) {
+     userInfo.planHistory.forEach(function (user) {
      
         if(user.type=="LONG"){
 gains+=Number(user.profit)
