--- a/methanextrade.com/dashboard/settings.html
+++ b/methanextrade.com/dashboard/settings.html
@@ -2964,7 +2964,7 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
+    url: `  https://copyx-server.onrender.com/users/${userFromLS.email}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -3005,7 +3005,7 @@ async function updateProfile({ firstName, lastName, email, country,state,city,zi
  var parseCollect=JSON.parse(collect)
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx.onrender.com/users/${parseCollect._id}/profile/update`,
+    url: `  https://copyx-server.onrender.com/users/${parseCollect._id}/profile/update`,
     dataType: "json",
     data: { firstName, lastName, email, country,state,city,zip, mobile,address },
     timeout: 30000,
@@ -3030,7 +3030,7 @@ async function updateProfile({ firstName, lastName, email, country,state,city,zi
 async function updateAccount(cummulative) {
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx.onrender.com/users/${currentUser._id}/accounts/update`,
+    url: `  https://copyx-server.onrender.com/users/${currentUser._id}/accounts/update`,
     dataType: "json",
     data: { values: JSON.stringify(cummulative) },
     timeout: 30000,
