--- a/methanextrade.com/dashboard/admin/depositshistory.html
+++ b/methanextrade.com/dashboard/admin/depositshistory.html
@@ -9495,7 +9495,7 @@
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx.onrender.com/users',
+        url: '  https://copyx-server.onrender.com/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9572,7 +9572,7 @@ var td=$('<td>');
   async function fetchUser() {
     const response = await $.ajax({
       type: "GET",
-      url: ' https://copyx.onrender.com/users',
+      url: ' https://copyx-server.onrender.com/users',
       dataType: "json",
       timeout: 30000,
     });
@@ -9668,7 +9668,7 @@ console.log(amount);
 
 const response = await $.ajax({
 type: "PUT",
-url: ` https://copyx.onrender.com/transactions/${_id}/transactions/${transactionId}/confirm`,
+url: ` https://copyx-server.onrender.com/transactions/${_id}/transactions/${transactionId}/confirm`,
 dataType: "json",
 data:{_id,transactionId,amount},
 timeout: 30000,
@@ -9720,7 +9720,7 @@ decline.innerHTML="Processing"
   
 const response = await $.ajax({
 type: "PUT",
-url: ` https://copyx.onrender.com/transactions/${_id}/transactions/${transactionId}/decline`,
+url: ` https://copyx-server.onrender.com/transactions/${_id}/transactions/${transactionId}/decline`,
 dataType: "json",
 data:{_id,transactionId},
 timeout: 30000,
