--- a/methanextrade.com/dashboard/admin/traderinfo.html
+++ b/methanextrade.com/dashboard/admin/traderinfo.html
@@ -1232,7 +1232,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `https://copyx-trader.onrender.com/users/${parsedData}`,
+    url: `https://copyx-trader-woux.onrender.comm/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1274,7 +1274,7 @@ async function updateProfile({  name, id,risk, drawdown, strategy ,profit,signal
 
   const response = await $.ajax({
     type: "PUT",
-    url: `https://copyx-trader.onrender.com/users/${currentUser._id}/profile/update`,
+    url: `https://copyx-trader-woux.onrender.comm/users/${currentUser._id}/profile/update`,
     dataType: "json",
     data: { name, id,risk, drawdown, strategy,profit,signal,minLimit,maxLimit,interest,followers },
     timeout: 30000,
