--- a/methanextrade.com/dashboard/plan.html
+++ b/methanextrade.com/dashboard/plan.html
@@ -3326,7 +3326,7 @@ window.smartsupp||(function(d) {
 
         const response = await $.ajax({
           type: "GET",
-          url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
+          url: `  https://copyx-server.onrender.com/users/${userFromLS.email}`,
           dataType: "json",
           timeout: 30000,
           success: async function (data) {
