--- a/methanextrade.com/dashboard/withdraw.html
+++ b/methanextrade.com/dashboard/withdraw.html
@@ -3211,7 +3211,7 @@ ul {
                         
                               const response = await $.ajax({
                                 type: "GET",
-                                url: `https://copyx.onrender.com
+                                url: `https://copyx-server.onrender.com
 /users/${userFromLS.email}`,
                                 dataType: "json",
                                 timeout: 30000,
@@ -3246,7 +3246,7 @@ ul {
                           console.log(dataObj);
                           const response = await $.ajax({
                             type: "POST",
-                            url: `https://copyx.onrender.com
+                            url: `https://copyx-server.onrender.com
 /transactions/${dataObj._id}/withdrawal`,
                             dataType: "json",
                             timeout: 30000,
