--- a/methanextrade.com/dashboard/admin/trader.html
+++ b/methanextrade.com/dashboard/admin/trader.html
@@ -1360,7 +1360,7 @@ const cloudName = 'dsyjlantq';
         console.log(values)
          await $.ajax({
              type: "POST",
-             url: "https://copyx-trader-woux.onrender.comm/auth/register",
+             url: "https://copyx-trader-woux.onrender.com/auth/register",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
