--- a/methanextrade.com/dashboard/copytransactions.html
+++ b/methanextrade.com/dashboard/copytransactions.html
@@ -3485,7 +3485,7 @@ window.smartsupp||(function(d) {
     // Wait for the response from the server
     const response = await $.ajax({
       type: "GET",
-      url: `https://copyx-trader-woux.onrender.comm/users/${traderData}`,
+      url: `https://copyx-trader-woux.onrender.com/users/${traderData}`,
       dataType: "json",
       timeout: 30000,
     });
