--- a/methanextrade.com/dashboard/trader-profile.html
+++ b/methanextrade.com/dashboard/trader-profile.html
@@ -3834,7 +3834,7 @@ var parsedData = localStorage.getItem('userem')
 
 const response = await $.ajax({
   type: "GET",
-  url: `https://copyx-trader-woux.onrender.comm/users/${parsedData}`,
+  url: `https://copyx-trader-woux.onrender.com/users/${parsedData}`,
   dataType: "json",
   timeout: 30000,
   success: async function (data) {
