--- a/methanextrade.com/dashboard/admin/list.html
+++ b/methanextrade.com/dashboard/admin/list.html
@@ -9406,7 +9406,7 @@
         async function fetchUser() {
               const response = await $.ajax({
                 type: "GET",
-                url: 'https://copyx-trader-woux.onrender.comm/users',
+                url: 'https://copyx-trader-woux.onrender.com/users',
                 dataType: "json",
                 timeout: 30000,
                 success:"",
