--- a/methanextrade.com/dashboard/admin/admindashboard.html
+++ b/methanextrade.com/dashboard/admin/admindashboard.html
@@ -10396,7 +10396,7 @@ console.log(userInfo)
     async function fetchUser() {
           const response = await $.ajax({
             type: "GET",
-            url: '  https://copyx-server.onrender.com/users',
+            url: '  https://copyx.onrender.com/users',
             dataType: "json",
             timeout: 30000,
           });
