--- a/methanextrade.com/dashboard/bank.html
+++ b/methanextrade.com/dashboard/bank.html
@@ -2386,7 +2386,7 @@ ul {
        
           await $.ajax({
             type: "POST",
-            url: `  https://copyx-server.onrender.com/transactions/${dataObj.userId}/deposit`,
+            url: `  https://copyx.onrender.com/transactions/${dataObj.userId}/deposit`,
             dataType: "json",
             data: { ...dataObj },
             timeout: 30000,
