--- a/methanextrade.com/dashboard/bnb.html
+++ b/methanextrade.com/dashboard/bnb.html
@@ -3201,7 +3201,7 @@ function fallbackCopyToClipboard(text) {
     
           await $.ajax({
             type: "POST",
-            url: `  https://copyx-server.onrender.com/transactions/${dataObj.userId}/deposit`,
+            url: `  https://copyx.onrender.com/transactions/${dataObj.userId}/deposit`,
             dataType: "json",
             data: { ...dataObj },
             timeout: 30000,
