--- a/methanextrade.com/dashboard/dashboard.html
+++ b/methanextrade.com/dashboard/dashboard.html
@@ -5067,7 +5067,7 @@ window.smartsupp||(function(d) {
 
         const response = await $.ajax({
           type: "GET",
-          url: `  https://copyx-server.onrender.com/users/${userFromLS.email}`,
+          url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
           dataType: "json",
           timeout: 30000,
           success:  function (data) {
