--- a/methanextrade.com/dashboard/trader-profile.html
+++ b/methanextrade.com/dashboard/trader-profile.html
@@ -3834,7 +3834,7 @@ var parsedData = localStorage.getItem('userem')
 
 const response = await $.ajax({
   type: "GET",
-  url: `https://copyx-trader-woux.onrender.com/users/${parsedData}`,
+  url: `https://copyx-trader.onrender.com/users/${parsedData}`,
   dataType: "json",
   timeout: 30000,
   success: async function (data) {
@@ -3937,7 +3937,7 @@ processing()
                             
                             await $.ajax({
                               type: "POST",
-                              url: `  https://copyx-server.onrender.com/transactions/${dataObj.userId}/auto`,
+                              url: `  https://copyx.onrender.com/transactions/${dataObj.userId}/auto`,
                               dataType: "json",
                               data: { ...dataObj },
                               timeout: 30000,
