--- a/methanextrade.com/dashboard/xcopy.html
+++ b/methanextrade.com/dashboard/xcopy.html
@@ -3418,7 +3418,7 @@ const userId=parseUser.email
     // Wait for the response from the server
     const response = await $.ajax({
       type: "GET",
-      url: `https://copyx-server.onrender.com/users/${userId}`,
+      url: `https://copyx.onrender.com/users/${userId}`,
       dataType: "json",
       timeout: 30000,
     });
