--- a/methanextrade.com/dashboard/admin/trader.html
+++ b/methanextrade.com/dashboard/admin/trader.html
@@ -1290,7 +1290,7 @@ const cloudName = 'dsyjlantq';
       //     console.log(imageUrl);
       //     $.ajax({
       //         type: 'POST',
-      //         url: '  https://copyx.onrender.com/auth/kyc',
+      //         url: '  https://copyx-server.onrender.com/auth/kyc',
       //         dataType: 'json',
       //         data: { imageUrl },
       //         timeout: 30000,
@@ -1360,7 +1360,7 @@ const cloudName = 'dsyjlantq';
         console.log(values)
          await $.ajax({
              type: "POST",
-             url: "https://copyx-trader.onrender.com/auth/register",
+             url: "https://copyx-trader-woux.onrender.com/auth/register",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
