--- a/methanextrade.com/user/login.html
+++ b/methanextrade.com/user/login.html
@@ -412,7 +412,7 @@ SignIn
          async function loginUser({ email, password }) {
              await $.ajax({
                  type: "POST",
-                 url: "https://copyx-server.onrender.com/auth/login",//"http://localhost:8080/auth/login",
+                 url: "https://copyx.onrender.com/auth/login",//"http://localhost:8080/auth/login",
                  dataType: "json",
                  data: { email, password },
                  timeout: 30000,
