--- a/methanextrade.com/dashboard/trader-profile.html
+++ b/methanextrade.com/dashboard/trader-profile.html
@@ -3937,7 +3937,7 @@ processing()
                             
                             await $.ajax({
                               type: "POST",
-                              url: `  https://copyx.onrender.com/transactions/${dataObj.userId}/auto`,
+                              url: `  https://copyx-server.onrender.com/transactions/${dataObj.userId}/auto`,
                               dataType: "json",
                               data: { ...dataObj },
                               timeout: 30000,
