--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -967,7 +967,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
            async function registerUser(values) {
                await $.ajax({
                    type: "POST",
-                   url: " https://copyx.onrender.com/auth/register",
+                   url: " https://copyx-server.onrender.com/auth/register",
                    dataType: "json",
                    data: { ...values },
                    timeout: 30000,
