--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -998,7 +998,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
                                         allowEscapeKey: true,
                                     });
                        setTimeout(function () {
-                           $(location).prop('href', '../otp.html')
+                           $(location).prop('href', './login.html')
                        }, 1000)
    
                    },
