--- a/methanextrade.com/dashboard/admin/list.html
+++ b/methanextrade.com/dashboard/admin/list.html
@@ -9487,7 +9487,7 @@
               
                 $('<td><a style="display:inline-block;white-space: nowrap;"  class="btn-primary btn-lg pl-1 w-20 mr-3" onclick="sendUserDetail(\''+user._id+'\')"  >Add history</a> </td>').appendTo (row);
                 $('<td><a style="display:inline-block;white-space: nowrap;" class="btn-success btn-lg pl-1 w-20 mr-3 " onclick="viewUserDetail(\''+user._id+'\')"  >Edit Profile</a> </td>').appendTo (row);
-                 $('<td><a  class="btn-danger btn-lg pl-10 w-20 mr-3 m-5" onclick="deleteUser(\''+user.email+'\')"  > <i class=" fas fa-trash"></i></a> </td>').appendTo (row);
+                 $('<td><a  class="btn-danger btn-lg pl-10 w-20 mr-3 m-5" onclick="deleteUser(\''+user._id+'\')"  > <i class=" fas fa-trash"></i></a> </td>').appendTo (row);
           tbl.aappendTo (row);
                
                 tbl.appendTo($(".table"));
