--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -848,7 +848,7 @@ jQuery("#notification-4").Notification(notification_4);
                                     <label class="form-label">Mobile</label>
                                     <div class="input-group ">
                                         <span class="">
-                                            <input type="number" class="form-control" id="mobile">         
+                                            <input type="number" class="form-control" id="phone">         
                                         </span>
                                                                  </div>
                                     <small class="text-danger mobileExist"></small>
@@ -1029,6 +1029,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
                const email=emaill.toLowerCase()
                const password = $('#password').val();
                const country = $('#country').val();
+               const phone = $('#phone').val();
                const referralCode = $('#referralCode').val();
    
                localStorage.setItem("password",password)
