--- a/methanextrade.com/dashboard/admin/userinfo.html
+++ b/methanextrade.com/dashboard/admin/userinfo.html
@@ -956,6 +956,13 @@
                                                   </td>
                                               </tr>
 
+                                              r>
+                                                  <th class="align-middle">Last Name:</th>
+                                                  <td>
+                                                      <input class="form-control" name="name" id="phone">
+                                                  </td>
+                                              </tr>
+
                                               <tr>
                                                 <th class="align-middle">Signal Strength:</th>
                                                 <td>
@@ -1373,7 +1380,7 @@ $(document).ready(async function () {
   $('#balance').val(userInfo.balance)
   $('#totalprofit').val(userInfo.profit)
   $('#country').val(userInfo.country)
-  // $('#copytrading').val(userInfo.copytrading)
+  $('#phone').val(userInfo.phone)
   $('#condition').val(userInfo.condition)
   $('#signal').val(userInfo.referalBonus)
   $('#server').val(userInfo.server)
