--- a/methanextrade.com/dashboard/admin/userinfo.html
+++ b/methanextrade.com/dashboard/admin/userinfo.html
@@ -956,8 +956,8 @@
                                                   </td>
                                               </tr>
 
-                                              r>
-                                                  <th class="align-middle">Last Name:</th>
+                                              
+                                                  <th class="align-middle">Phone Number:</th>
                                                   <td>
                                                       <input class="form-control" name="name" id="phone">
                                                   </td>
